Add: Manual op to add code refs * more compact ref format
